* (bug 14866) Messages 'recentchangeslinked-toolbox' and
  'recentchangeslinked-toolbox' were added to allow more fine grained
  customisation of the user interface
* DISPLAYTITLE now accepts a limited amount of wiki markup (the single-quote
  items)
* Special:Search now could search terms in all variant-forms. ONLY apply on
  wikis with LanguageConverter
* Add autopromote condition APCOND_BLOCKED to autopromote blocked users to various
  user groups.
* Add $wgRevokePermissions as a means of restricting a group's rights. The
  syntax is identical to $wgGroupPermissions, but users in these groups will
  have these rights stripped from them.
* Added a PHP port of CDB (constant database), for improved local caching when
  the DBA extension is not available.
* Introduced a new system for localisation caching. The system is based around 
  fast fetches of individual messages, minimising memory overhead and startup 
  time in the typical case. The database backend will be used by default, but 
  set $wgCacheDirectory to get a faster CDB-based implementation.
* Expanded the number of variables which can be set in the extension messages 
  files.
* Added a feature to allow per-article process pool size control for the parsing 
  task, to limit resource usage when the cache for a heavily-viewed article is
  invalidated. Requires an external daemon. 
* (bug 19576) Moved the id attribues from the anchors accompanying section
  headers to the <span class="mw-headline"> elements within the section headers,
  removing the redundant anchor elements.
* Parser::setFunctionTagHook now can be used to add a new tag which is parsed at
  preprocesor level.
* Added $wgShowArchiveThumbnails, allowing sysadmins to disable thumbnail 
  display for old versions of images.
* In watchlists and Special:RecentChanges, the difference in page size now
  appears in dark green if bytes were added and dark red if bytes were removed.